--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -2034,7 +2034,9 @@ line-height: 35px;
      font-size: 1rem;
      color: white;
      font-family: 'Arial', 'Helvetica', sans-serif;
+     margin-bottom: 20px;
  }
+ 
  
  .swiper-button-prev, .swiper-button-next {
      color: rgb(0, 0, 0) !important;
